# taic

./: Cargo.toml  LICENSE
src/: chatbots.rs  cli.rs  commands.rs  config.rs  history.rs  lib.rs  main.rs  session.rs  ui.rs
src/chatbots/: dummy.rs  gemini.rs
tests/: cli.rs
